add: update details tab, progress: favourite functional

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <img src="./img/cloud-ico.svg" alt="current weather image" class="value">
                                 <div class="temperature"><span class="value">0</span>°</div>
                                 <span class="city value">city</span>
-                                <img src="./img/heart-active-ico.svg" alt="favourite's heart">
+                                <button class="like value"></button>
                             </figure>
 
                             <div class="details ">
@@ -43,7 +43,7 @@
                         </div>
 
                         <nav class="selects">
-                            <button class="border">Now</button>
+                            <button class="border active">Now</button>
                             <button class="border">Details</button>
                             <button class="border">Forecast</button>
                         </nav>
