add: favorite container, add fav, show fav

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="favourite border">
                         <span class="border">Added Locations:</span>    
                         <ul class="locations">
-                            <li></li>                                          
+                            <li class="city"> <button><img src="" alt=""></button></li>                                          
                         </ul>                               
                     </div> 
                 </div>       
