add: delete favorite button, select favorite button, fix: like button styles

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                             <div class="details ">
                                 <span class="value">city</span>
                                 <ul class="stats">
-                                    <li>Temperature: <span class="value">0</span>°</li>
-                                    <li>Feels like: <span class="value">0</span>°</li>
+                                    <li>Temperature: <span><span class="value">0</span> °</span></li>
+                                    <li>Feels like: <span><span class="value">0</span> °</span></li>
                                     <li>Weather: <span class="value">weather</span></li>
                                     <li>Sunrise: <span class="value">00:00</span></li>
                                     <li>Sunset: <span class="value">00:00</span></li>
@@ -52,7 +52,10 @@
                     <div class="favourite border">
                         <span class="border">Added Locations:</span>    
                         <ul class="locations">
-                            <li class="city"> <button><img src="" alt=""></button></li>                                          
+                            <li class="city">
+                                <span></span>
+                                <img src="./img/close-icon.svg" alt="">
+                            </li>                                          
                         </ul>                               
                     </div> 
                 </div>       
