add: weather change

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             </div>
 
                             <figure class="forecast ">
-                                <img src="./img/soon-img.png" alt="">
+                                <img src="./img/to-be.jpg" alt="">
                             </figure>                      
                         </div>
 
@@ -58,11 +58,11 @@
                             </li>                                          
                         </ul>                               
                     </div> 
-                </div>       
+                </div>
+                <audio preload src="./sound/Jojo's Bizarre Adventure — To be Continued (www.lightaudio.ru).mp3"></audio>         
             </div>
-        </div>    
+        </div>  
     </div> 
-    
     <script type="module" src="./js/main.js"></script>
 </body>
 </html>
