remake: view (add functions who changing interface), todo: forecast tab, view weather consts group

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div id="weather" class="weather__frame">
             <div class="weather__deck">
-                <form class="search">
+                <form name="weather" class="search">
                     <input name="city" type="text" value="" placeholder="Write city">
                     <button name="submit"></button>
                 </form>
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </div>  
-    </div> 
+    </div>
     <script type="module" src="./js/main.js"></script>
 </body>
 </html>
