add: forecast filler, fix: forecast HTML, favorites HTML padding, in progress: awaits for request weather

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             </div>
 
                             <div class="forecast ">
-                                <span class="value">City</span>
+                                <span>City</span>
                                 <ul class="details">
                                     <li>
                                         <div class="date">
