--- a/index.html
+++ b/index.html
@@ -16,17 +16,22 @@
                     <button name="submit"></button>
                 </form>
 
+                <div class="form__notificarion ">
+                    <span>Notificación</span>
+                </div>
+
                 <div class="result">
                     <div class="presents border">
                         <div class="description border">
-                            <div class="now active">
+
+                            <div class="now trans active">
                                 <img src="./img/cloud-ico.svg" alt="clouds" class="value">
                                 <div class="temperature"><span class="value">0</span>°</div>
                                 <span class="city value">City</span>
                                 <button class="like value"></button>
                             </div>
 
-                            <div class="details ">
+                            <div class="details trans ">
                                 <span class="value">City</span>
                                 <ul class="stats">
                                     <li>Temperature: <span><span class="value">0</span>°</span></li>
@@ -37,7 +42,7 @@
                                 </ul>
                             </div>
 
-                            <div class="forecast ">
+                            <div class="forecast trans">
                                 <span>City</span>
                                 <ul class="details">
                                     <li>
