try fix notification

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <button name="submit"></button>
                 </form>
 
-                <div class="form__notificarion ">
-                    <span>Notificación</span>
+                <div class="form__notification ">
+                    <span>Notificatión</span>
                 </div>
 
                 <div class="result">
