remake: ui, storage, not global const uppercase, fix: update last city weather, remove: forecast fullscreen

--- a/index.html
+++ b/index.html
@@ -16,22 +16,20 @@
                     <button name="submit"></button>
                 </form>
 
-                <div class="form__notification ">
-                    <span>Notificatión</span>
-                </div>
+                <span class="form__notification "> Notificatión </span>
 
                 <div class="result">
                     <div class="presents border">
                         <div class="description border">
 
-                            <div class="now trans active">
+                            <div class="now  ">
                                 <img src="./img/cloud-ico.svg" alt="clouds" class="value">
                                 <div class="temperature"><span class="value">0</span>°</div>
                                 <span class="city value">City</span>
                                 <button class="like value"></button>
                             </div>
 
-                            <div class="details trans ">
+                            <div class="details active ">
                                 <span class="value">City</span>
                                 <ul class="stats">
                                     <li>Temperature: <span><span class="value">0</span>°</span></li>
@@ -42,7 +40,7 @@
                                 </ul>
                             </div>
 
-                            <div class="forecast trans">
+                            <div class="forecast">
                                 <span>City</span>
                                 <ul class="details">
                                     <li>
