--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                     <div class="presents border">
                         <div class="description border">
 
-                            <div class="now  ">
+                            <div class="now  active">
                                 <img src="./img/cloud-ico.svg" alt="clouds" class="value">
                                 <div class="temperature"><span class="value">0</span>°</div>
                                 <span class="city value">City</span>
                                 <button class="like value"></button>
                             </div>
 
-                            <div class="details active ">
+                            <div class="details  ">
                                 <span class="value">City</span>
                                 <ul class="stats">
                                     <li>Temperature: <span><span class="value">0</span>°</span></li>
