remake main, add own 'add' event, remake view

--- a/index.html
+++ b/index.html
@@ -23,39 +23,39 @@
                         <div class="description border">
 
                             <div class="now  active">
-                                <img src="./img/cloud-ico.svg" alt="clouds" class="value">
-                                <div class="temperature"><span class="value">0</span>°</div>
-                                <span class="city value">City</span>
-                                <button class="like value"></button>
+                                <img src="./img/cloud-ico.svg" alt="clouds" class="icon">
+                                <div class="temperature"><span class="temp">0</span>°</div>
+                                <span class="city">City</span>
+                                <button class="like"></button>
                             </div>
 
                             <div class="details  ">
-                                <span class="value">City</span>
+                                <span class="city">City</span>
                                 <ul class="stats">
-                                    <li>Temperature: <span><span class="value">0</span>°</span></li>
-                                    <li>Feels like: <span><span class="value">0</span>°</span></li>
-                                    <li>Weather: <span class="value">Weather</span></li>
-                                    <li>Sunrise: <span class="value">00:00</span></li>
-                                    <li>Sunset: <span class="value">00:00</span></li>
+                                    <li>Temperature: <span><span class="temp">0</span>°</span></li>
+                                    <li>Feels like: <span><span class="feels">0</span>°</span></li>
+                                    <li>Weather: <span class="weather">Weather</span></li>
+                                    <li>Sunrise: <span class="rise">00:00</span></li>
+                                    <li>Sunset: <span class="set">00:00</span></li>
                                 </ul>
                             </div>
 
                             <div class="forecast">
-                                <span>City</span>
+                                <span class="city">City</span>
                                 <ul class="details">
                                     <li>
                                         <div class="date">
-                                            <span class="value">1 January</span>
-                                            <span class="value">00:00</span>
+                                            <span class="date">1 January</span>
+                                            <span class="time">00:00</span>
                                         </div>
                                         <div class="stats">
                                             <ul>
-                                                <li>Temperature: <span><span class="value">0</span> °</span></li>
-                                                <li>Feels like: <span><span class="value">0</span> °</span></li>
+                                                <li>Temperature: <span><span class="temp">0</span> °</span></li>
+                                                <li>Feels like: <span><span class="feels">0</span> °</span></li>
                                             </ul>
                                             <figure>
-                                                <figcaption class="value">Weather</figcaption>
-                                                <img src="./img/cloud-ico.svg" alt="clouds" class="value">
+                                                <figcaption class="weather">Weather</figcaption>
+                                                <img src="./img/cloud-ico.svg" alt="clouds" class="icon">
                                             </figure>
                                         </div>
                                     </li>
