make best forecast filler

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                                     <li>Temperature: <span><span class="temp">0</span>°</span></li>
                                     <li>Feels like: <span><span class="feels">0</span>°</span></li>
                                     <li>Weather: <span class="weather">Weather</span></li>
-                                    <li>Sunrise: <span class="rise">00:00</span></li>
-                                    <li>Sunset: <span class="set">00:00</span></li>
+                                    <li>Sunrise: <span class="sunrise">00:00</span></li>
+                                    <li>Sunset: <span class="sunset">00:00</span></li>
                                 </ul>
                             </div>
 
@@ -44,7 +44,7 @@
                                 <span class="city">City</span>
                                 <ul class="details">
                                     <li>
-                                        <div class="date">
+                                        <div class="date__time">
                                             <span class="date">1 January</span>
                                             <span class="time">00:00</span>
                                         </div>
