add: data & parcel libs, remake: format data

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                                         </div>
                                         <div class="stats">
                                             <ul>
-                                                <li>Temperature: <span><span class="temp">0</span> °</span></li>
-                                                <li>Feels like: <span><span class="feels">0</span> °</span></li>
+                                                <li>Temperature: <span class="temp">0</span> °</li>
+                                                <li>Feels like: <span class="feels">0</span> °</li>
                                             </ul>
                                             <figure>
                                                 <figcaption class="weather">Weather</figcaption>
